--- a/se_practice/pom.xml
+++ b/se_practice/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.yu.cs.com1320.project.se_practice</groupId>
-    <artifactId>Baseball Statistics</artifactId>
+    <artifactId>BaseballStatistics</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -26,6 +26,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
