--- a/se_practice/pom.xml
+++ b/se_practice/pom.xml
@@ -35,6 +35,11 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.decimal4j</groupId>
+            <artifactId>decimal4j</artifactId>
+            <version>1.0.3</version>
+        </dependency>
     </dependencies>
 
 </project>
